--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,9 +7,11 @@ label.post.id=게시글 번호
 label.post.content=내용
 label.post.title=제목
 label.post.writer=작성자
+label.post.date=작성 날짜
 
 page.posts=게시글 목록
 page.post=게시글 상세
 page.addPost=게시글 등록
 page.updatePost=게시글 수정
+page.delete=게시글 삭제
 page.home=홈 화면
